fix  letter-spacing

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -51,7 +51,6 @@ body
     font-family: $q
     font-weight: 400
     line-height: 1.5
-    letter-spacing: 0px
     +r(0, 991)
       font-size: 16px
     +r(992)
